--- a/views/addpage.html
+++ b/views/addpage.html
@@ -4,25 +4,45 @@
   <h3>Add a Page</h3>
   <hr>
   <form method="POST" action="/wiki/">
-    
-    <div>PLACEHOLDER FOR AUTHOR NAME FIELD</div>
-    
-    <div>PLACEHOLDER FOR AUTHOR EMAIL FIELD</div>
-    
+
+    <div class="form-group">
+        <label for="name" class="col-sm-2 control-label">Author Name</label>
+        <div class="col-sm-10">
+          <input name="name" type="text" class="form-control"/>
+        </div>
+      </div>
+
+    <div class="form-group">
+        <label for="email" class="col-sm-2 control-label">Email</label>
+        <div class="col-sm-10">
+          <input name="email" type="text" class="form-control"/>
+        </div>
+      </div>
+
     <div class="form-group">
       <label for="title" class="col-sm-2 control-label">Page Title</label>
       <div class="col-sm-10">
         <input name="title" type="text" class="form-control"/>
       </div>
     </div>
-    
-    <div>PLACEHOLDER FOR PAGE CONTENT TEXTAREA FIELD</div>
-    
-    <div>PLACEHOLDER FOR PAGE STATUS INPUT FIELD</div>
+
+    <div class="form-group">
+        <label for="content" class="col-sm-2 control-label">Content</label>
+        <div class="col-sm-10">
+          <input name="content" type="text" class="form-control"/>
+        </div>
+    </div>
+
+    <div class="form-group">
+        <label for="open" class="col-sm-2 control-label">Status</label>
+        <div class="col-sm-10">
+          <input name="open" type="text" class="form-control"/>
+        </div>
+      </div>
 
     <div class="col-sm-offset-2 col-sm-10">
       <button type="submit" class="btn btn-primary">submit</button>
     </div>
-  
+
   </form>
 {% endblock %}
